updated Beginners Guide to 3.3.7 & added 3.3.7 Debian Deployment Guide

--- a/_posts/2024/2024-11-12-Cobbler-v3.3.7-Beginners-Guide.md
+++ b/_posts/2024/2024-11-12-Cobbler-v3.3.7-Beginners-Guide.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Cobbler v3.3.6 Beginner's Guide
+title: Cobbler v3.3.7 Beginner's Guide
 author: Sus-Admin
-summary: Getting started with Cobbler v3.3.6; basic installation, setup and automated PXE client provisioning
+summary: Getting started with Cobbler v3.3.7; basic installation, setup and automated PXE client provisioning
 ---
 
 This guide is intended to accompany and extend the official Cobbler [Installation](https://cobbler.readthedocs.io/en/v3.3.6/installation-guide.html) and [Quick Start](https://cobbler.readthedocs.io/en/v3.3.6/quickstart-guide.html) guides.
@@ -17,7 +17,7 @@ Cobbler is an open-source, system deployment and provisioning software which can
 
 ## Objective
 
-Starting with a fresh installation of Fedora 34 Server (or Workstation - [Fedora download archive](https://archives.fedoraproject.org/pub/archive/fedora/linux/releases/34/Server/x86_64/iso/)), this guide will detail preparing the system for Cobbler v3.3.6 installation from source, including prerequisite/dependency installations and network setup, and then provide all necessary steps to install and configure Cobbler to automatically provision another LAN host with Fedora 34 or 37 Server through PXE network boot.
+Starting with a fresh installation of Fedora 34 Server (or Workstation - [Fedora download archive](https://archives.fedoraproject.org/pub/archive/fedora/linux/releases/34/Server/x86_64/iso/)), this guide will detail preparing the system for Cobbler v3.3.7 installation from source, including prerequisite/dependency installations and network setup, and then provide all necessary steps to install and configure Cobbler to automatically provision another LAN host with Fedora 34 or 37 Server through PXE network boot.
 
 ## Environment
 
@@ -58,14 +58,14 @@ This guide assumes that both the **Cobbler Server** and **PXE Clinet(s)** are ru
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
 	    <h3><b>Physical Network Diagram</b></h3>
-        {% include figure.liquid loading="eager" path="images/Cobbler-3.3.6-Beginners_Physical.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="images/Cobbler-3.3.7-Beginners_Physical.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
 		<div class="caption">
             The Cobbler server and PXE client(s) are not shown here, as they are VMs, not physical workstations.
         </div>
     </div>
     <div class="col-sm mt-3 mt-md-0">
 	    <h3><span style="float:right;"><b>Logical Network Diagram</b></span></h3>
-        {% include figure.liquid loading="eager" path="images/Cobbler-3.3.6-Beginners_Logical.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="images/Cobbler-3.3.7-Beginners_Logical.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
 		<div class="caption">
             The VirtualBox host (my Windows 10 laptop) is only shown for completeness, it is not used in the procedures other than the VM settings described above.
         </div>
@@ -78,7 +78,7 @@ This guide assumes that both the **Cobbler Server** and **PXE Clinet(s)** are ru
 
 ## Fedora Server Basics
 
-As stated above, this document outlines the procedures necessary to install and configure Cobbler v3.3.6 on a Fedora 34 host server for local network installations/provisioning through PXE. Additionally, necessary adjustments will be made for security through **selinux** and **firewalld** on the Cobbler server. As such, it is recommended to keep things simple and **limit the number of additional applications installed** to the Cobbler server to **minimize unexpected firewall and selinux complications.**
+As stated above, this document outlines the procedures necessary to install and configure Cobbler v3.3.7 on a Fedora 34 host server for local network installations/provisioning through PXE. Additionally, necessary adjustments will be made for security through **selinux** and **firewalld** on the Cobbler server. As such, it is recommended to keep things simple and **limit the number of additional applications installed** to the Cobbler server to **minimize unexpected firewall and selinux complications.**
 
 ### Updating
 
@@ -143,14 +143,14 @@ yum install make git python3-devel python3-sphinx python3-coverage openssl httpd
 
 > Cobbler is also available through the YUM repos, using `yum install cobbler`
 
-Download **cobbler v3.3.6** source code from the official GitHub repo
+Download **cobbler v3.3.7** source code from the official GitHub repo
 
 ```shell
-wget -P  ~/Downloads/. https://github.com/cobbler/cobbler/archive/refs/tags/v3.3.6.zip
+wget -P  ~/Downloads/. https://github.com/cobbler/cobbler/archive/refs/tags/v3.3.7.zip
 
 mkdir -p /usr/src/cobbler
 cd /usr/src/cobbler
-unzip -d . ~/Downloads/v3.3.6
+unzip -d . ~/Downloads/v3.3.7
 ```
 
 Install the runtime dependencies and enable system services *(systemd will probably report some errors...)*
@@ -171,7 +171,7 @@ yum install grub2-pc grub2-pc-modules grub2-efi-x64-modules grub2-efi-aa64-modul
 Install Cobbler
 
 ```shell
-cd /usr/src/cobbler/cobbler-3.3.6
+cd /usr/src/cobbler/cobbler-3.3.7
 make install
 systemctl restart httpd
 ```
@@ -202,6 +202,12 @@ Optionally, toggle some additional settings:
 sed -i "s/pxe_just_once: true/pxe_just_once: false/" /etc/cobbler/settings.yaml
 sed -i "s/enable_ipxe: false/enable_ipxe: true/" /etc/cobbler/settings.yaml
 ```
+
+> Even if you do not enable iPXE above, it won't hurt to symlink the correct file that cobbler points to in the `/etc/cobbler/dhcp.template` file.
+>
+> ```shell
+> ln -s /usr/share/ipxe/undionly.kpxe /var/lib/cobbler/loaders/undionly.kpxe
+> ```
 
 Edit the subnet decaration in **/etc/cobbler/dhcp.tempate** to match the **enp0s8** interface:
 
@@ -270,12 +276,12 @@ Now, create the **PXE Client** VM according to the specs described in the **Envi
 Finally, create a new Cobbler System, replacing `aa:bb:cc:dd:ee:ff` with the MAC Address of the **PXE Client** VM created above, and sync up Cobbler *(More information on Cobbler autoinstall templates and kickstart files in the* ***Tips & Troubleshooting*** *section below)*:
 
 ```shell
-cobbler system add --name Fedora34 --profile Fedora34-x86_64 --netboot-enabled true --hostname fedora34 --interface enp0s3 --static true --mac-address "aa:bb:cc:dd:ee:ff" --ip-address 10.0.0.11 --gateway 10.0.0.1 --netmask 255.255.255.0 --name-servers "10.0.0.1"
+cobbler system add --name Fedora34 --profile Fedora34-x86_64 --mac-adress "aa:bb:cc:dd:ee:ff" --netboot-enabled true --hostname fedora34 --interface enp0s3 --static true --ip-address 10.0.0.11 --gateway 10.0.0.1 --netmask 255.255.255.0 --name-servers "10.0.0.1"
 systemctl restart cobblerd && sleep 10
 cobbler sync
 ```
 
-*leave out the `--static true` option in the above command to configure the PXE client to use DHCP for its IP configuration post-install; if using DHCP, you may omit all the command parameters following `--hostname fedora34`.*
+*leave out the `--static true` option in the above command to configure the PXE client to use DHCP for its IP configuration post-install; if using DHCP, you may omit all the command parameters following `--netboot-enabled true`.*
 
 > *The* ***PXE Client*** *VM can now be powered on, and should automatically boot to PXE and install Fedora 34 to the VM HDD using the "Fedora34.ks" kickstart template created above.*
 > 
@@ -291,7 +297,7 @@ cobbler import --name=Fedora37 --arch=x86_64 --path=/mnt/Fedora
 cobbler distro edit --name Fedora37-x86_64 --kernel-options ""
 cat /var/lib/cobbler/templates/sample.ks | grep -v "\--useshadow" | grep -v ^install | sed 's,selinux --disabled,selinux --permissive,' | sed 's,rootpw --iscrypted \$default_password_crypted,rootpw --iscrypted \$default_password_crypted\nuser --groups=wheel --name=fedora --password=\$default_password_crypted --iscrypted --gecos="fedora",' | tee /var/lib/cobbler/templates/Fedora37.ks
 cobbler profile edit --name Fedora37-x86_64 --autoinstall Fedora37.ks
-cobbler system add --name Fedora37 --profile Fedora37-x86_64 --netboot-enabled true --hostname fedora37 --interface enp0s3 --static true --mac-address "aa:bb:cc:dd:ee:ff" --ip-address 10.0.0.12 --gateway 10.0.0.1 --netmask 255.255.255.0 --name-servers "10.0.0.1"
+cobbler system add --name Fedora37 --profile Fedora37-x86_64 --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true --hostname fedora37 --interface enp0s3 --static true --ip-address 10.0.0.12 --gateway 10.0.0.1 --netmask 255.255.255.0 --name-servers "10.0.0.1"
 systemctl restart cobblerd && sleep 10
 cobbler sync
 ```
@@ -443,7 +449,7 @@ systemctl restart tftp httpd
 
 1. Cobbler's [official docs](https://cobbler.readthedocs.io/en/v3.3.6/installation-guide.html#id2) advise that installing and running Cobbler in a virtual environment is not possible, but I have had no issues related to virtualization.
 
-1. Some dependencies are missing from the official [Cobbler docs](https://cobbler.readthedocs.io/en/v3.3.6/installation-guide.html#packages). Have a look at the [dockerfile](https://github.com/cobbler/cobbler/blob/v3.3.6/docker/rpms/Fedora_34/Fedora34.dockerfile) located in cobbler's source code for a more complete list.
+1. Some dependencies are missing from the official [Cobbler docs](https://cobbler.readthedocs.io/en/v3.3.6/installation-guide.html#packages). Have a look at the [dockerfile](https://github.com/cobbler/cobbler/blob/v3.3.7/docker/rpms/Fedora_34/Fedora34.dockerfile) located in cobbler's source code for a more complete list.
 
 1. It's always a good idea to manually install the desired distro (Fedora 34 or 37 Server in the case of this guide) to the desired hardware (VirtualBox VM in this case) before attempting a network installation, to validate compatability.
 
@@ -471,10 +477,6 @@ systemctl restart tftp httpd
             lsb_release -a
             echo $SHELL
             ```
-
-1. The PXE client software that comes with VirtualBox VM firmware **DOES NOT** support HTTP as a download protocol, so it may be best to leave iPXE disabled in `/etc/cobbler/settings.yaml`
-
-    - HTTP can always be utilized if you boot the PXE client from CD using the latest [ipxe.iso](https://boot.ipxe.org/ipxe.iso)
 
 1. By default, Cobbler's DHCP server attempts to detect the PXE client's boot firmware type in order to provide a BIOS or UEFI compatible bootloader *(BIOS: "grub.0" - UEFI: "grubx64.efi")*. If using **BIOS firmware** for the PXE client VM, the Cobbler server's DHCP service may not provide the right bootloader.
 
