made some corrections to Debian Guide; most importantly re-introduced the functions of the 'preseed_early_default' and 'preseed_late_default' that come standard with Cobbler for Debian autoinstalls by merging in my workaround (pre-installation) and post-installation changes into new scripts to be used in the preseed

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
@@ -19,7 +19,9 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
 ### Caveats
 
-- using the `cobbler check` CLI command, the output recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), which will become available over HTTP, and use that as the local repo mirror to install over the network.
+- Along the same lines as the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) I prefer to locally host/mirror the base OS repo to alleviate public internet availability and bandwidth dependencies during network installations.
+
+- using the `cobbler check` CLI command, the output recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), similarly to the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html), and use that as the local repo mirror to install over the network.
 
     - This method is not the Cobbler official method, and Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy"
 
@@ -27,7 +29,7 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
         - For completeness however, the **debmirror** method will be detailed towards the bottom of this guide, in the **Mirroring with debmirror** section.
 
-- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a local/private repo where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official CD/DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
+- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a **local/private repo** where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official CD/DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
 
     - This appears to be a bug in the `debian-installer` (`d-i`); more info provided in the **Tips & Troubleshooting** section below.
 
@@ -48,7 +50,7 @@ cd ~/Downloads && wget https://cdimage.debian.org/debian-cd/current/amd64/iso-dv
 cd ~/Downloads && wget https://cdimage.debian.org/mirror/cdimage/archive/11.11.0/amd64/iso-dvd/debian-11.11.0-amd64-DVD-1.iso
 ```
 
-Additionally, all Debian releases at the time of writing require the "netboot" initial ramdisk (`initrd`) provided separately by the Debian maintainers in order to properly boot over the network. Furthermore, Debian 11 Bullseye and earlier require the "netboot firmware" image, which is an extension to the netboot `initrd` image containing drivers for non-free firmware, also provided by Debian.
+Additionally, all Debian releases at the time of writing require the "netboot" initial ramdisk (`initrd`) provided separately by the Debian maintainers in order to properly boot over the network. Furthermore, Debian 11 Bullseye and earlier require the "netboot firmware" image, which is an extension to the netboot `initrd` image containing drivers for non-free firmware, also provided separately by Debian.
 
 ```shell
 wget -O ~/Downloads/Debian12.8-netboot.gz https://ftp.debian.org/debian/dists/stable/main/installer-amd64/current/images/netboot/debian-installer/amd64/initrd.gz
@@ -76,7 +78,7 @@ gpg --full-gen-key --batch <(echo "Key-Type: 1"; \
                              echo "%no-protection"; )
 
 gpg --output /var/www/cobbler/pub/cobbler.gpg.asc --armor --export cobbler
-sudo restorecon -R /var/www/cobbler/pub
+restorecon -R /var/www/cobbler/pub
 ```
 
 > for simplicity, this GPG key will not be password protected. This is against cyber-security best practices and should only be implemented in a test environment.
@@ -110,30 +112,36 @@ cobbler distro edit --name Debian12.8-x86_64 --initrd "/var/www/cobbler/pub/Debi
 Create a new "preseed" (autoinstall) template from the sample included with Cobbler, and make the necessary changes to install from an unofficial source.
 
 ```shell
-cp /var/lib/cobbler/templates/sample.seed /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,# d-i debian-installer/allow_unauthenticated boolean true,d-i debian-installer/allow_unauthenticated boolean true,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,# d-i apt-setup/local0/key string http://local.server/key,d-i apt-setup/local0/repository string http://$http_server$install_source_directory\nd-i apt-setup/local0/key string http://$http_server/cblr/pub/cobbler.gpg.asc,' /var/lib/cobbler/templates/bookworm-sample.seed
+cp /var/lib/cobbler/templates/sample.seed /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,# d-i debian-installer/allow_unauthenticated boolean true,d-i debian-installer/allow_unauthenticated boolean true,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,# d-i apt-setup/local0/key string http://local.server/key,d-i apt-setup/local0/repository string http://$http_server$install_source_directory\nd-i apt-setup/local0/key string http://$http_server/cblr/pub/cobbler.gpg.asc,' /var/lib/cobbler/templates/bookworm-workaround.seed
 ```
 
-> This is where the bug mentioned in the **Caveats** section above is introduced. The `apt-setup/local0/key` preseed value *should* allow us to provide the `debian-installer` with a GPG key to use to validate the installation source.
+> This is where the bug mentioned in the **Caveats** section above is introduced. The `apt-setup/local0/key` preseed value *should* allow us to provide the `debian-installer` with a GPG key to validate the installation source, but the installation always fails without the **workaround** detailed below.
+>
+> When the **workaround** is implemented, the installation completes successfully and the resulting system's installation log always has an entry like `Downloading local repository key failed`.
 > 
-> Still confugre it to retrieve the key over HTTP anyway, just in case.
+> Still, confugre it to retrieve the key over HTTP anyway, just in case.
 
-Create a file named `preseed_early_workaround` in the `/var/lib/cobbler/scripts` directory with the following contents which will run on the PXE client to circumvent the bug mentioned in the **Caveats** section above:
+Use the standard `preseed_early_default` Cobbler Script to create a new Cobbler Script which will implement the ***workaround*** to be run on the PXE client to circumvent the bug mentioned in the **Caveats** section above:
 
 ```shell
-#!/bin/sh
-while true; do
-	[ -d /target/etc/apt/trusted.gpg.d ] && cd /target/etc/apt/trusted.gpg.d && fetch-url http://10.0.0.10/cblr/pub/cobbler.gpg.asc cobbler.gpg.asc && exit;
+grep -v '# End preseed_early_default' /var/lib/cobbler/scripts/preseed_early_default | tee /var/lib/cobbler/scripts/preseed_early_workaround
+
+echo 'while true; do
+	[ -d /target/etc/apt/trusted.gpg.d ] && cd /target/etc/apt/trusted.gpg.d && fetch-url http://$http_server/cblr/pub/cobbler.gpg.asc cobbler.gpg.asc && exit;
+	echo nope;
 	sleep 1;
 done 2> /dev/null 1> /dev/null &
+# End preseed_early_default' | tee -a /var/lib/cobbler/scripts/preseed_early_workaround
 ```
 
-Optionally, create another preseed script (`/var/lib/cobbler/scripts/preseed_late_sudo_sources`) to run in the post-installation stage which will grant sudo privileges to the "debian" user (created below) and reconfigure the installed system to use Debian's official APT sources instead of our local Cobbler server.
+Create another preseed script (from the standard `preseed_late_default` Cobbler Script) to run in the post-installation stage which will grant sudo privileges to the "debian" user (created below) and reconfigure the installed system to use Debian's official APT sources instead of the local Cobbler server.
 
 ```shell
-#!/bin/sh
-sed -i 's,#PermitRootLogin prohibit-password,PermitRootLogin no,' /etc/ssh/sshd_config
+grep -v '# End preseed_late_default' /var/lib/cobbler/scripts/preseed_late_default | tee /var/lib/cobbler/scripts/preseed_late_bookworm
+
+echo "sed -i 's,#PermitRootLogin prohibit-password,PermitRootLogin no,' /etc/ssh/sshd_config
 usermod -aG sudo debian
 sed -i 's,^,#,' /etc/apt/sources.list
 echo 'deb http://deb.debian.org/debian bookworm main non-free-firmware non-free contrib' >> /etc/apt/sources.list
@@ -142,24 +150,25 @@ echo 'deb http://security.debian.org/debian-security bookworm-security main non-
 echo 'deb-src http://security.debian.org/debian-security bookworm-security main non-free-firmware non-free contrib' >> /etc/apt/sources.list
 echo 'deb http://deb.debian.org/debian bookworm-updates main non-free-firmware non-free contrib' >> /etc/apt/sources.list
 echo 'deb-src http://deb.debian.org/debian bookworm-updates main non-free-firmware non-free contrib' >> /etc/apt/sources.list
+# End preseed_late_default" | tee -a /var/lib/cobbler/scripts/preseed_late_bookworm
 ```
 
-Modify the new preseed (autoinstall) template to install desired packages only, setup an additional user "debian", set the workaround script created above to run in the "early" installation stage, and the "preseed_late" script to run in the late stage, if configured, and more aggressively force the installation regardless of any existing installations.
+Modify the new preseed (autoinstall) template to install desired packages only, setup an additional user "debian", set the workaround script created above to run in the "early" installation stage, and the "preseed_late" script to run in the late stage, and more aggressively force the installation regardless of any existing installations.
 
 ```shell
-sed -i 's,ntp ssh wget,wget curl openssh-server sudo vim\npopularity-contest popularity-contest/participate boolean false,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,# d-i apt-setup/services-select multiselect security,d-i apt-setup/services-select multiselect,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,d-i partman-auto/method string lvm,d-i partman-efi/non_efi_system boolean true\nd-i partman-auto/method string lvm,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,d-i grub-installer/bootdev string default,d-i grub-installer/bootdev string default\nd-i grub-installer/with_other_os boolean true\nd-i grub-installer/force-efi-extra-removable boolean false\nd-i grub-installer/enable_os_prober_otheros_yes boolean false\nd-i grub-installer/enable_os_prober_otheros_no boolean true,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,d-i passwd/make-user boolean false,d-i passwd/make-user boolean true\nd-i passwd/user-fullname string Debian Admin\nd-i passwd/username string debian\nd-i passwd/user-password-crypted password $default_password_crypted,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,script=preseed_early_default,script=preseed_early_workaround,' /var/lib/cobbler/templates/bookworm-sample.seed
-sed -i 's,script=preseed_late_default,script=preseed_late_sudo_sources,' /var/lib/cobbler/templates/bookworm-sample.seed
+sed -i 's,ntp ssh wget,wget curl openssh-server sudo vim\npopularity-contest popularity-contest/participate boolean false,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,# d-i apt-setup/services-select multiselect security,d-i apt-setup/services-select multiselect,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,d-i partman-auto/method string lvm,d-i partman-efi/non_efi_system boolean true\nd-i partman-auto/method string lvm,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,d-i grub-installer/bootdev string default,d-i grub-installer/bootdev string default\nd-i grub-installer/with_other_os boolean true\nd-i grub-installer/force-efi-extra-removable boolean false\nd-i grub-installer/enable_os_prober_otheros_yes boolean false\nd-i grub-installer/enable_os_prober_otheros_no boolean true,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,d-i passwd/make-user boolean false,d-i passwd/make-user boolean true\nd-i passwd/user-fullname string Debian Admin\nd-i passwd/username string debian\nd-i passwd/user-password-crypted password $default_password_crypted,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,script=preseed_early_default,script=preseed_early_workaround,' /var/lib/cobbler/templates/bookworm-workaround.seed
+sed -i 's,script=preseed_late_default,script=preseed_late_bookworm,' /var/lib/cobbler/templates/bookworm-workaround.seed
 ```
 
 Configure the Cobbler Profile to use the new autoinstall (preseed) template:
 
 ```shell
-cobbler profile edit --name Debian12.8-x86_64 --autoinstall 'bookworm-sample.seed'
+cobbler profile edit --name Debian12.8-x86_64 --autoinstall 'bookworm-workaround.seed'
 ```
 
 Finally, create a new Cobbler System to PXE boot and automatically install Debian 12 Bookworm, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, then sync up Cobbler.
@@ -169,11 +178,11 @@ cobbler system add --name "Debian12.8" --profile Debian12.8-x86_64 --hostname "d
 cobbler sync
 ```
 
-The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Debian 12.8 to the VM HDD using the "bookworm-sample.seed" preseed template created above.
+The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Debian 12.8 to the VM HDD using the "bookworm-workaround.seed" preseed template created above.
 
 ## Debian 11 Bullseye PXE Deployment
 
-Take similar steps as above, with the inclusion of the netboot "firmware" image file in the combined `initrd.gz` image file, and using the "bookworm-sample.seed" template created above as a starting point and trimming off a few unsupported preseed settings to import and automatically deploy Debian 11 Bullseye over PXE.
+Take similar steps as above, with the inclusion of the netboot "firmware" image file in the combined `initrd.gz` image file, and using the "bookworm-workaround.seed" template created above as a starting point and trimming off a few unsupported preseed settings to import and automatically deploy Debian 11 Bullseye over PXE.
 
 ```shell
 [ -e /mnt/Debian ] || mkdir /mnt/Debian
@@ -187,8 +196,9 @@ gpg -u cobbler --clear-sign --output InRelease Release
 cat /var/www/cobbler/distro_mirror/Debian11.11/install.amd/initrd.gz ~/Downloads/Debian11.11-netboot.gz ~/Downloads/Debian11.11-firmware.gz > /var/www/cobbler/pub/Debian11.11-netboot.gz
 cobbler distro edit --name Debian11.11-x86_64 --initrd "/var/www/cobbler/pub/Debian11.11-netboot.gz"
 
-grep -v "os_prober" /var/lib/cobbler/templates/bookworm-sample.seed > /var/lib/cobbler/templates/bullseye-sample.seed
-cobbler profile edit --name Debian11.11-x86_64 --autoinstall bullseye-sample.seed
+sed 's,bookworm,bullseye,' /var/lib/cobbler/scripts/preseed_late_bookworm > /var/lib/cobbler/scripts/preseed_late_bullseye
+grep -v "os_prober" /var/lib/cobbler/templates/bookworm-workaround.seed | sed 's,preseed_late_bookworm,preseed_late_bullseye' > /var/lib/cobbler/templates/bullseye-workaround.seed
+cobbler profile edit --name Debian11.11-x86_64 --autoinstall bullseye-workaround.seed
 
 cobbler system add --name Debian11.11 --profile Debian11.11-x86_64 --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true
 
@@ -235,7 +245,7 @@ debmirror -p -v --method http -a amd64 -h ftp.us.debian.org -d stable -s main,ma
 
 ### Cobbler reposync and debmirror
 
-use the `cobbler repo` and `cobbler reposync` commands in order to mirror Debian lates repo locally:
+use the `cobbler repo` and `cobbler reposync` commands in order to mirror Debian latest repo locally:
 
 ```shell
 cobbler repo add --name Debian-latest --keep-updated true --mirror-locally true --breed apt --arch x86_64 --mirror "http://ftp.us.debian.org/debian" --apt-components=main,main/debian-installer,non-free-firmware --apt-dists=bookworm --yumopts '--keyring'='/usr/share/keyrings/debian-archive-keyring.gpg'
@@ -245,7 +255,7 @@ cobbler reposync
 Configure a new preseed file for installation via the trusted, signed Debian repo:
 
 ```shell
-cp /var/lib/cobbler/templates/bookworm-sample.seed /var/lib/cobbler/templates/bookworm-latest.seed
+cp /var/lib/cobbler/templates/bookworm-workaround.seed /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i apt-setup/local0/repository,#d-i apt-setup/local0/repository,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i apt-setup/local0/key,#d-i apt-setup/local0/key,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i debian-installer/allow_unauthenticated,#d-i debian-installer/allow_unauthenticated,' /var/lib/cobbler/templates/bookworm-latest.seed
@@ -370,3 +380,4 @@ Now the **PXE Client** should be able to boot from a generic/random MAC address 
             - [https://debian-handbook.info/browse/wheezy/sect.package-authentication.html](https://debian-handbook.info/browse/wheezy/sect.package-authentication.html)
         - [https://serverfault.com/questions/337278/debian-how-can-i-securely-get-debian-archive-keyring-so-that-i-can-do-an-apt-g](https://serverfault.com/questions/337278/debian-how-can-i-securely-get-debian-archive-keyring-so-that-i-can-do-an-apt-g)
         - [https://ubuntuforums.org/archive/index.php/t-2217665.html](https://ubuntuforums.org/archive/index.php/t-2217665.html)
+
