small syntax correction...

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
@@ -197,7 +197,7 @@ cat /var/www/cobbler/distro_mirror/Debian11.11/install.amd/initrd.gz ~/Downloads
 cobbler distro edit --name Debian11.11-x86_64 --initrd "/var/www/cobbler/pub/Debian11.11-netboot.gz"
 
 sed 's,bookworm,bullseye,' /var/lib/cobbler/scripts/preseed_late_bookworm > /var/lib/cobbler/scripts/preseed_late_bullseye
-grep -v "os_prober" /var/lib/cobbler/templates/bookworm-workaround.seed | sed 's,preseed_late_bookworm,preseed_late_bullseye' > /var/lib/cobbler/templates/bullseye-workaround.seed
+grep -v "os_prober" /var/lib/cobbler/templates/bookworm-workaround.seed | sed 's,preseed_late_bookworm,preseed_late_bullseye,' > /var/lib/cobbler/templates/bullseye-workaround.seed
 cobbler profile edit --name Debian11.11-x86_64 --autoinstall bullseye-workaround.seed
 
 cobbler system add --name Debian11.11 --profile Debian11.11-x86_64 --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true
